--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jest": "^27.4.7",
     "rollup": "^2.64.0",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-typescript2": "^0.31.1"
+    "rollup-plugin-typescript2": "^0.31.1",
+    "typescript": "^4.5.4"
   }
 }
